Resolve "Take 2: Use GOR links rather then symbolic links in filecache"